# rssrs

./: Cargo.toml  README.md
src/: config.rs  main.rs  store.rs  ui.rs
