[package]
name = "rssrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
dirs = "1.0.4"
reqwest = { version = "0.11.9", features = ["blocking"] }
feed-rs = "1.0.0"
serde = "1.0.136"
serde_yaml = "0.8.23"
